Push data to postgres. Fix up screen app errors/inconsistencies (#293)